--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 absl-py==0.8.1
 astor==0.8.0
 certifi==2019.11.28
+dj-database-url==0.5.0
 Django==2.2.5
 gast==0.2.2
 google-pasta==0.1.8
@@ -18,8 +19,10 @@ numpy==1.18.1
 opt-einsum==3.1.0
 Pillow==7.0.0
 protobuf==3.11.2
+psycopg2==2.8.4
 pyaml==19.12.0
 pyreadline==2.1
+python-decouple==3.3
 pytz==2019.3
 PyYAML==5.3
 scipy==1.3.2
